# UPR-Projekt-Bulanci

./: .gitignore  CMakeLists.txt  README.md  collisionMap.c  collisionMap.h  engine.c  engine.h  main  main.c  player.c  player.h  sceneManager.c  sceneManager.h  ui.c  ui.h  weapon.c  weapon.h
src/: CMakeLists.txt  engine.c  engine.h  main.c  player.c  player.h  sceneManager.c  sceneManager.h  ui.c  ui.h  weapon.c  weaponPickup.c  weaponPickup.h
